<resources>
    <string name="app_name">ASL Buddy</string>
    <string name="title_activity_login">ASL Buddy Sign-In</string>

    <!-- General Strings -->
    <string name="app_title">ASL Buddy</string>
    <string name="interpreter">Interpreter</string>
    <string name="HOH">ASL or Hard-of-hearing</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_create_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up_as">Sign-up as one of the following:</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_failed_login">Couldn\'t sign in with email and/or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to HOHMenu and InterpreterMenu -->
    <string name="select_accomodation">Select your accomodation</string>
    <string name="hearing_tool">Hearing Tool</string>
    <string name="video_interpreter">Video Interpreter</string>
    <string name="physical_interpreter">Physical Interpreter</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="request_purposes">
        <item>Medical</item>
        <item>Educational</item>
        <item>Confidential</item>
        <item>Other</item>
    </string-array>

    <string name="label_set_radius">Radius</string>
    <string name="label_request_purpose">Request Purpose</string>
    <string name="label_description">*if other, enter description here.</string>
    <string name="label_details">Details</string>
    <string name="label_back">Back</string>
    <string name="label_submit">Submit</string>
    <string name="label_create_physical_request">Create Physical request</string>
    <string name="label_create_video_request">Create Video request</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_install_skype">Install Skype</string>
    <string name="label_skype_check">You must have Skype Installed to use this feature</string>
    <string name="label_increase_range">Increase Range</string>
    <string name="label_request_error">There are no interpreters within range. Please choose a following action</string>
    <string name="label_continue">continue</string>
    <string name="dialog_redirect_message">You are about to leave ASL Buddy and open the Google Play Store</string>
    <string name="dialog_title_warning">WARNING!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDdpX-ncWDYGfZkGauZi0-_TgFv1V8w8ww</string>
</resources>

