<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/dialog_redirect_message"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_cancel_install"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_continue_install"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_continue"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
