<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_hoh"
    android:background="@drawable/login_bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="northseattlecollege.ASLBuddy.MenuHOH">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeHOH"
        android:text="Welcome!"
        android:textSize="25dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_below="@+id/welcomeHOH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_accomodation"
        android:text="@string/select_accomodation"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/hearing_tool_button"
        style="?android:textAppearanceLarge"
        android:layout_below="@+id/select_accomodation"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/hearing_tool"
        android:textStyle="bold"
        android:padding="15dp" />

    <Button
        android:id="@+id/video_interpreter_button"
        style="?android:textAppearanceLarge"
        android:layout_below="@+id/hearing_tool_button"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/video_interpreter"
        android:textStyle="bold"
        android:padding="15dp" />

    <Button
        android:id="@+id/physical_interpreter_button"
        style="?android:textAppearanceLarge"
        android:layout_below="@+id/video_interpreter_button"
        android:layout_centerHorizontal="true"
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/physical_interpreter"
        android:textStyle="bold"
        android:padding="15dp" />

    <Button
        android:id="@+id/logout_button"
        style="?android:textAppearanceMedium"
        android:layout_below="@+id/physical_interpreter_button"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/action_logout"
        android:textStyle="bold"
        android:background="#ff6e66" />

</RelativeLayout>
