<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="northseattlecollege.ASLBuddy.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <!-- Additions to generated LoginActivity XML -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dont_have_account"
                android:text="@string/dont_have_account"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_as"
                android:text="@string/sign_up_as"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"/>

            <RadioGroup
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/HohUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HOH"
                    android:textSize="20dp"
                    android:onClick="selectUserType"/>
                <RadioButton
                    android:id="@+id/InterpreterUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interpreter"
                    android:textSize="20dp"
                    android:onClick="selectUserType"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/create_email"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:background="#efefef"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_password"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:background="#efefef"
                    android:paddingLeft="10dp"
                    android:hint="@string/prompt_create_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceMedium"
                android:layout_marginLeft="50dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
