<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="northseattlecollege.ASLBuddy.fragments.CreateRequestFragment">

    <LinearLayout
        android:id="@+id/layout_create_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_request_purpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/label_request_purpose" />

                <Spinner
                    android:id="@+id/spinner_request_purpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/request_purposes"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="8dp"
                    android:text="@string/label_description" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/label_details" />

            <EditText
                android:id="@+id/edit_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3"
                android:scrollbars="vertical" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/set_radius_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:text="@string/label_submit"
                android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
